# DNS-proxy-server

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: server.h
src/: server.c
